plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

allprojects {

    apply plugin: 'idea'
    apply plugin: 'java-library'

    group = 'fr.hyriode'

    repositories {
        mavenCentral()
    }

    dependencies {
        api 'com.google.code.gson:gson:2.9.0'
    }

}

version '1.0.0'
archivesBaseName = 'Hydrion'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}

compileJava {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_16
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

shadowJar {
    configurations = [project.configurations.runtimeClasspath]
    archiveVersion.set('')
    manifest {
        attributes 'Main-Class': 'fr.hyriode.hydrion.Bootstrap'
    }
}

dependencies {
    api project(':API')
    implementation 'org.slf4j:slf4j-nop:1.7.36'
    implementation 'jline:jline:2.14.6'
}
